--- a/R0-CSV to GeoJSON.ipynb
+++ b/R0-CSV to GeoJSON.ipynb
@@ -263,7 +263,7 @@
     "        geometry = gpd.points_from_xy([df['Longitude'][i]], [df['Latitude'][i]]),\n",
     "        crs = \"EPSG:4326\"\n",
     "    )\n",
-    "    if df['Site'][i] == 'INDONESIA':    #\n",
+    "    if df['Site'][i] == 'INDONESIA':    # Indonesia is a bit strange, so we make it an exception. \n",
     "        temp_GDF_32632 = temp_GDF_4326.to_crs(\"EPSG:23830\")\n",
     "        print(\"INDONESIA!\")\n",
     "    else:\n",
@@ -960,6 +960,17 @@
      "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
