--- a/R0-Retrieve S2 Images Dates.ipynb
+++ b/R0-Retrieve S2 Images Dates.ipynb
@@ -77,27 +77,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>20230824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>20230831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Austria</td>\n",
+       "      <th>2</th>\n",
+       "      <td>AU-MIEMING</td>\n",
        "      <td>20230824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>BE-Maa</td>\n",
-       "      <td>20230823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BE-Vie</td>\n",
-       "      <td>20230810</td>\n",
+       "      <td>BASP</td>\n",
+       "      <td>20230831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Brasschaat</td>\n",
+       "      <td>BE-BRASCHAAT</td>\n",
        "      <td>20230823</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -106,11 +106,11 @@
       ],
       "text/plain": [
        "               Site      Date\n",
-       "0  ATLAS-Mohammed V  20230831\n",
-       "1           Austria  20230824\n",
-       "2            BE-Maa  20230823\n",
-       "3            BE-Vie  20230810\n",
-       "4        Brasschaat  20230823"
+       "0              ATGE  20230824\n",
+       "1  ATLAS-Mohammed V  20230831\n",
+       "2        AU-MIEMING  20230824\n",
+       "3              BASP  20230831\n",
+       "4      BE-BRASCHAAT  20230823"
       ]
      },
      "execution_count": 5,
@@ -130,19 +130,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_Dates.to_csv(cwd + \"\\\\Site_S2Images_Dates.csv\", index = False)"
    ]
