--- a/Temp-Spostamento.ipynb
+++ b/Temp-Spostamento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4                             2022-06-01        NaN      NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
     "                        \"height\": out_image.shape[1],\n",
     "                        \"width\": out_image.shape[2],\n",
     "                        \"transform\": out_transform})\n",
-    "        with rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m Spostamento.tif\", \"w\", **out_meta) as dest:\n",
+    "        with rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m.tif\", \"w\", **out_meta) as dest:\n",
     "            dest.write(out_image)"
    ]
   },
