--- a/Temp-Metrics.ipynb
+++ b/Temp-Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cwd = \"c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\"\n",
+    "# DISC\\\\Python\n",
+    "cwd = \"..\\\\\"\n",
     "cwd_Images_Raw = cwd + \"\\\\Sentinel-2 Images Raw\"\n",
     "cwd_Images_Processed = cwd + \"\\\\Sentinel-2 Images Processed\""
    ]
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
        "4                             2022-06-01        NaN      NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
     "    V_900 = skg.Variogram(arr_Coordinates_900, band_900_reshape, use_nugget=True, bin_func=bin_900, maxlag = bin_900[-1])\n",
     "    V_1200 = skg.Variogram(arr_Coordinates_1200, band_1200_reshape, use_nugget=True, bin_func=bin_1200, maxlag = bin_1200[-1])\n",
     "    range_30 = V_30.parameters[0]\n",
-    "    sill_30 = V_30.parameters[1] + V_300.parameters[2]\n",
+    "    sill_30 = V_30.parameters[1] + V_30.parameters[2]\n",
     "    nugget_30 = V_30.parameters[2]\n",
     "    range_100 = V_100.parameters[0]\n",
     "    sill_100 = V_100.parameters[1] + V_100.parameters[2]\n",
@@ -895,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
