--- a/NoteBooks/TEST.ipynb
+++ b/NoteBooks/TEST.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,17 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import rasterio as rio\n",
+    "from scipy.interpolate import interp1d\n",
+    "import matplotlib.pyplot as plt\n",
     "# Import the custom python script files\n",
     "import my_Variogram\n",
-    "import my_RomanMetrics"
+    "import my_RomanMetrics\n",
+    "import my_Variogram_Plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "site_Name = \"BASP\""
+    "cwd_Image_Folder = cwd + \"\\\\Sentinel-2 Images Processed\\\\US-LIN\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,28 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set internal distance\n",
-    "distances_Int = [30,30,100,300,300]\n",
+    "distances_Int = [30,30,100,300,300,300]\n",
     "# Set external distance\n",
-    "distances_Ext = [100,300,300,900,1200]"
+    "distances_Ext = [100,300,300,600,900,1200]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[30, 100, 300, 900, 1200]"
+       "[30, 100, 300, 600, 900, 1200]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +114,7 @@
       "Distance 30 has been calculated!\n",
       "Distance 100 has been calculated!\n",
       "Distance 300 has been calculated!\n",
+      "Distance 600 has been calculated!\n",
       "Distance 900 has been calculated!\n",
       "Distance 1200 has been calculated!\n"
      ]
@@ -125,13 +129,15 @@
     "list_bins = []\n",
     "list_experimental_model = []\n",
     "list_fitted_model = []\n",
+    "list_empiral_X = []\n",
+    "list_empiral_Y = []\n",
     "for i in range(len(list_distances)):\n",
-    "    img = rio.open(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\NIRv \" + str(list_distances[i]) + \"m.tif\")\n",
+    "    img = rio.open(cwd_Image_Folder + \"\\\\NIRv \" + str(list_distances[i]) + \"m.tif\")\n",
     "    band = img.read(1).reshape(-1)\n",
     "    temp_std = my_Variogram.calc_STD(band)\n",
     "    temp_cv = my_Variogram.calc_CV(band)\n",
     "    coordinates = my_Variogram.get_Coordinates_from_Rio(img)\n",
-    "    temp_range, temp_nugget, temp_sill, temp_bins, temp_experimental_model, temp_fitted_model = my_Variogram.calc_Variogram_Parameters(band,coordinates,list_distances[i])\n",
+    "    temp_range, temp_nugget, temp_sill, temp_bins, temp_experimental_model, temp_fitted_model, temp_empiral_X, temp_empiral_Y = my_Variogram.calc_Variogram_Parameters(band,coordinates,list_distances[i])\n",
     "    list_std.append(temp_std)\n",
     "    list_cv.append(temp_cv)\n",
     "    list_range.append(temp_range)\n",
@@ -140,12 +146,14 @@
     "    list_bins.append(temp_bins)\n",
     "    list_experimental_model.append(temp_experimental_model)\n",
     "    list_fitted_model.append(temp_fitted_model)\n",
+    "    list_empiral_X.append(temp_empiral_X)\n",
+    "    list_empiral_Y.append(temp_empiral_Y)\n",
     "    print(f\"Distance {list_distances[i]} has been calculated!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -181,62 +189,72 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30</td>\n",
-       "      <td>0.107388</td>\n",
-       "      <td>0.011019</td>\n",
+       "      <td>0.844591</td>\n",
+       "      <td>0.008956</td>\n",
        "      <td>20.000000</td>\n",
-       "      <td>0.013728</td>\n",
-       "      <td>6.829347e-03</td>\n",
+       "      <td>0.626820</td>\n",
+       "      <td>3.118349e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>100</td>\n",
-       "      <td>0.505830</td>\n",
-       "      <td>0.050378</td>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>0.280141</td>\n",
-       "      <td>2.311226e-12</td>\n",
+       "      <td>1.803579</td>\n",
+       "      <td>0.019019</td>\n",
+       "      <td>65.576055</td>\n",
+       "      <td>3.883706</td>\n",
+       "      <td>6.266085e-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>300</td>\n",
-       "      <td>2.249598</td>\n",
-       "      <td>0.208518</td>\n",
+       "      <td>5.390128</td>\n",
+       "      <td>0.057523</td>\n",
        "      <td>210.000000</td>\n",
-       "      <td>5.202114</td>\n",
-       "      <td>1.558166e-01</td>\n",
+       "      <td>31.142912</td>\n",
+       "      <td>6.796741e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>900</td>\n",
-       "      <td>7.137173</td>\n",
-       "      <td>0.550165</td>\n",
-       "      <td>179.047736</td>\n",
-       "      <td>47.130686</td>\n",
-       "      <td>1.619532e+00</td>\n",
+       "      <td>600</td>\n",
+       "      <td>4.484857</td>\n",
+       "      <td>0.048321</td>\n",
+       "      <td>157.755668</td>\n",
+       "      <td>21.122576</td>\n",
+       "      <td>4.401695e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>900</td>\n",
+       "      <td>18.635796</td>\n",
+       "      <td>0.211051</td>\n",
+       "      <td>630.000000</td>\n",
+       "      <td>347.913864</td>\n",
+       "      <td>1.051105e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>1200</td>\n",
-       "      <td>9.229855</td>\n",
-       "      <td>0.722840</td>\n",
-       "      <td>840.000000</td>\n",
-       "      <td>89.699852</td>\n",
-       "      <td>4.732420e+01</td>\n",
+       "      <td>31.965300</td>\n",
+       "      <td>0.358960</td>\n",
+       "      <td>836.615153</td>\n",
+       "      <td>1041.065977</td>\n",
+       "      <td>3.253057e+02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Distance       STD        CV       Range       Sill        Nugget\n",
-       "0        30  0.107388  0.011019   20.000000   0.013728  6.829347e-03\n",
-       "1       100  0.505830  0.050378   70.000000   0.280141  2.311226e-12\n",
-       "2       300  2.249598  0.208518  210.000000   5.202114  1.558166e-01\n",
-       "3       900  7.137173  0.550165  179.047736  47.130686  1.619532e+00\n",
-       "4      1200  9.229855  0.722840  840.000000  89.699852  4.732420e+01"
+       "   Distance        STD        CV       Range         Sill        Nugget\n",
+       "0        30   0.844591  0.008956   20.000000     0.626820  3.118349e-01\n",
+       "1       100   1.803579  0.019019   65.576055     3.883706  6.266085e-31\n",
+       "2       300   5.390128  0.057523  210.000000    31.142912  6.796741e+00\n",
+       "3       600   4.484857  0.048321  157.755668    21.122576  4.401695e+00\n",
+       "4       900  18.635796  0.211051  630.000000   347.913864  1.051105e+02\n",
+       "5      1200  31.965300  0.358960  836.615153  1041.065977  3.253057e+02"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +284,7 @@
       "Internal distance 30 and external distance 100 has been computed!\n",
       "Internal distance 30 and external distance 300 has been computed!\n",
       "Internal distance 100 and external distance 300 has been computed!\n",
+      "Internal distance 300 and external distance 600 has been computed!\n",
       "Internal distance 300 and external distance 900 has been computed!\n",
       "Internal distance 300 and external distance 1200 has been computed!\n"
      ]
@@ -312,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -351,78 +370,91 @@
        "      <th>0</th>\n",
        "      <td>30</td>\n",
        "      <td>100</td>\n",
-       "      <td>3.572139</td>\n",
-       "      <td>0.784802</td>\n",
-       "      <td>0.990028</td>\n",
-       "      <td>5.965000</td>\n",
-       "      <td>0.139972</td>\n",
-       "      <td>0.232891</td>\n",
+       "      <td>1.123471</td>\n",
+       "      <td>0.783804</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>5.524818</td>\n",
+       "      <td>0.445049</td>\n",
+       "      <td>0.300309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30</td>\n",
        "      <td>300</td>\n",
-       "      <td>17.924253</td>\n",
+       "      <td>5.422610</td>\n",
        "      <td>0.791319</td>\n",
-       "      <td>0.936148</td>\n",
-       "      <td>19.269141</td>\n",
-       "      <td>0.027895</td>\n",
-       "      <td>0.074068</td>\n",
+       "      <td>0.583290</td>\n",
+       "      <td>15.334800</td>\n",
+       "      <td>0.092207</td>\n",
+       "      <td>0.126504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>100</td>\n",
        "      <td>300</td>\n",
-       "      <td>3.139037</td>\n",
-       "      <td>0.932233</td>\n",
-       "      <td>-0.027075</td>\n",
-       "      <td>1.910142</td>\n",
-       "      <td>0.159285</td>\n",
-       "      <td>0.381051</td>\n",
+       "      <td>2.024581</td>\n",
+       "      <td>0.928257</td>\n",
+       "      <td>-0.204377</td>\n",
+       "      <td>1.503488</td>\n",
+       "      <td>0.246965</td>\n",
+       "      <td>0.460319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>300</td>\n",
-       "      <td>900</td>\n",
-       "      <td>1.638458</td>\n",
-       "      <td>0.966376</td>\n",
-       "      <td>-0.000529</td>\n",
-       "      <td>-0.151268</td>\n",
-       "      <td>0.305165</td>\n",
-       "      <td>0.639743</td>\n",
+       "      <td>600</td>\n",
+       "      <td>-0.159978</td>\n",
+       "      <td>0.963728</td>\n",
+       "      <td>0.004123</td>\n",
+       "      <td>-0.239312</td>\n",
+       "      <td>3.125431</td>\n",
+       "      <td>0.910581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>300</td>\n",
+       "      <td>900</td>\n",
+       "      <td>2.668961</td>\n",
+       "      <td>0.976881</td>\n",
+       "      <td>-0.088192</td>\n",
+       "      <td>1.678137</td>\n",
+       "      <td>0.187339</td>\n",
+       "      <td>0.407280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>300</td>\n",
        "      <td>1200</td>\n",
-       "      <td>2.466563</td>\n",
-       "      <td>0.977386</td>\n",
-       "      <td>-0.450296</td>\n",
-       "      <td>0.948012</td>\n",
-       "      <td>0.202711</td>\n",
-       "      <td>0.441369</td>\n",
+       "      <td>5.240244</td>\n",
+       "      <td>0.977381</td>\n",
+       "      <td>-0.106323</td>\n",
+       "      <td>2.503679</td>\n",
+       "      <td>0.095415</td>\n",
+       "      <td>0.278231</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Internal Distance  External Distance        Rcv       Rse       Rst  \\\n",
-       "0                 30                100   3.572139  0.784802  0.990028   \n",
-       "1                 30                300  17.924253  0.791319  0.936148   \n",
-       "2                100                300   3.139037  0.932233 -0.027075   \n",
-       "3                300                900   1.638458  0.966376 -0.000529   \n",
-       "4                300               1200   2.466563  0.977386 -0.450296   \n",
+       "   Internal Distance  External Distance       Rcv       Rse       Rst  \\\n",
+       "0                 30                100  1.123471  0.783804  0.990000   \n",
+       "1                 30                300  5.422610  0.791319  0.583290   \n",
+       "2                100                300  2.024581  0.928257 -0.204377   \n",
+       "3                300                600 -0.159978  0.963728  0.004123   \n",
+       "4                300                900  2.668961  0.976881 -0.088192   \n",
+       "5                300               1200  5.240244  0.977381 -0.106323   \n",
        "\n",
        "         Rsv  RAW Score  ST Score  \n",
-       "0   5.965000   0.139972  0.232891  \n",
-       "1  19.269141   0.027895  0.074068  \n",
-       "2   1.910142   0.159285  0.381051  \n",
-       "3  -0.151268   0.305165  0.639743  \n",
-       "4   0.948012   0.202711  0.441369  "
+       "0   5.524818   0.445049  0.300309  \n",
+       "1  15.334800   0.092207  0.126504  \n",
+       "2   1.503488   0.246965  0.460319  \n",
+       "3  -0.239312   3.125431  0.910581  \n",
+       "4   1.678137   0.187339  0.407280  \n",
+       "5   2.503679   0.095415  0.278231  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,6 +472,71 @@
     "    \"ST Score\": list_ST_Score\n",
     "})\n",
     "df_Roman"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Vario.to_csv(cwd_Image_Folder + \"\\\\Vario.csv\", index = False)\n",
+    "df_Roman.to_csv(cwd_Image_Folder + \"\\\\Roman.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a cubic model to plot curve\n",
+    "def crea_Cubic_Model(fitted_model, bin, interp1d_kind = \"cubic\"):\n",
+    "    def fx(x):\n",
+    "        return fitted_model(x)\n",
+    "    cubic_model = interp1d(np.concatenate((np.array([0]),bin)), fx(np.concatenate((np.array([0]),bin)),), kind = interp1d_kind)\n",
+    "    return cubic_model\n",
+    "\n",
+    "# Create linspace continuous x coordinates from bin\n",
+    "def crea_Linspace_X(bin):\n",
+    "    return np.linspace(0,bin[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_Variogram(list_Distance, list_Bin, list_Fitted_Model, list_Range, list_Sill, list_Nugget, list_Empiral_X,list_Empiral_Y, path_SaveFig, bool_SaveFig = False, bool_CloseFig = False, site_Name_Graph = \"Site\", figsize = (20,10), my_Colors = [\"Grey\",\"Red\",\"Black\",\"Orange\",\"Green\",\"Blue\"], my_Markers = [\"2\",\"o\",\"v\",\"H\",\"s\",\"*\"]):\n",
+    "    plt.figure(figsize = figsize)\n",
+    "    for i in range(len(list_Distance)):\n",
+    "        temp_x = crea_Linspace_X(list_Bin[i])\n",
+    "        if len(list_Bin[i]) >= 4:\n",
+    "            temp_cubic_model = crea_Cubic_Model(list_Fitted_Model[i], list_Bin[i])\n",
+    "            plt.plot(temp_x, temp_cubic_model(temp_x), label = f'{list_Distance[i]} Theoretical; a = {list_Range[i]:.2F}; c = {list_Sill[i]:.2F}; c0 = {list_Nugget[i]:.2E}', color = my_Colors[i], linestyle = '-')\n",
+    "        else:\n",
+    "            plt.plot(temp_x, list_Fitted_Model[i](temp_x), label = f'{list_Distance[i]} Theoretical; a = {list_Range[i]:.2F}; c = {list_Sill[i]:.2F}; c0 = {list_Nugget[i]:.2E}', color = my_Colors[i], linestyle = '-')\n",
+    "    for i in range(len(list_Distance)):\n",
+    "        plt.scatter(list_Empiral_X[i],list_Empiral_Y[i], color = my_Colors[i], label = f'{list_Distance[i]} Experimental', marker = my_Markers[i])\n",
+    "    plt.title(\"Variogram of \" + site_Name_Graph)\n",
+    "    plt.xlabel(\"Distance or Lag\")\n",
+    "    plt.ylabel(\"Semivariance\")\n",
+    "    plt.legend()\n",
+    "    plt.grid()\n",
+    "    if bool_SaveFig:\n",
+    "        plt.savefig(path_SaveFig)\n",
+    "    if bool_CloseFig:\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_Variogram(list_distances, list_bins, list_fitted_model, list_range, list_sill, list_nugget, list_empiral_X,list_empiral_Y, site_Name_Graph = cwd_Image_Folder.split(\"\\\\\")[-1], path_SaveFig = cwd_Image_Folder + \"\\\\Variogram.png\", bool_SaveFig = True, bool_CloseFig = True)"
    ]
   },
   {
