--- a/NoteBooks/TEST.ipynb
+++ b/NoteBooks/TEST.ipynb
@@ -486,57 +486,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a cubic model to plot curve\n",
-    "def crea_Cubic_Model(fitted_model, bin, interp1d_kind = \"cubic\"):\n",
-    "    def fx(x):\n",
-    "        return fitted_model(x)\n",
-    "    cubic_model = interp1d(np.concatenate((np.array([0]),bin)), fx(np.concatenate((np.array([0]),bin)),), kind = interp1d_kind)\n",
-    "    return cubic_model\n",
-    "\n",
-    "# Create linspace continuous x coordinates from bin\n",
-    "def crea_Linspace_X(bin):\n",
-    "    return np.linspace(0,bin[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_Variogram(list_Distance, list_Bin, list_Fitted_Model, list_Range, list_Sill, list_Nugget, list_Empiral_X,list_Empiral_Y, path_SaveFig, bool_SaveFig = False, bool_CloseFig = False, site_Name_Graph = \"Site\", figsize = (20,10), my_Colors = [\"Grey\",\"Red\",\"Black\",\"Orange\",\"Green\",\"Blue\"], my_Markers = [\"2\",\"o\",\"v\",\"H\",\"s\",\"*\"]):\n",
-    "    plt.figure(figsize = figsize)\n",
-    "    for i in range(len(list_Distance)):\n",
-    "        temp_x = crea_Linspace_X(list_Bin[i])\n",
-    "        if len(list_Bin[i]) >= 4:\n",
-    "            temp_cubic_model = crea_Cubic_Model(list_Fitted_Model[i], list_Bin[i])\n",
-    "            plt.plot(temp_x, temp_cubic_model(temp_x), label = f'{list_Distance[i]} Theoretical; a = {list_Range[i]:.2F}; c = {list_Sill[i]:.2F}; c0 = {list_Nugget[i]:.2E}', color = my_Colors[i], linestyle = '-')\n",
-    "        else:\n",
-    "            plt.plot(temp_x, list_Fitted_Model[i](temp_x), label = f'{list_Distance[i]} Theoretical; a = {list_Range[i]:.2F}; c = {list_Sill[i]:.2F}; c0 = {list_Nugget[i]:.2E}', color = my_Colors[i], linestyle = '-')\n",
-    "    for i in range(len(list_Distance)):\n",
-    "        plt.scatter(list_Empiral_X[i],list_Empiral_Y[i], color = my_Colors[i], label = f'{list_Distance[i]} Experimental', marker = my_Markers[i])\n",
-    "    plt.title(\"Variogram of \" + site_Name_Graph)\n",
-    "    plt.xlabel(\"Distance or Lag\")\n",
-    "    plt.ylabel(\"Semivariance\")\n",
-    "    plt.legend()\n",
-    "    plt.grid()\n",
-    "    if bool_SaveFig:\n",
-    "        plt.savefig(path_SaveFig)\n",
-    "    if bool_CloseFig:\n",
-    "        plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_Variogram(list_distances, list_bins, list_fitted_model, list_range, list_sill, list_nugget, list_empiral_X,list_empiral_Y, site_Name_Graph = cwd_Image_Folder.split(\"\\\\\")[-1], path_SaveFig = cwd_Image_Folder + \"\\\\Variogram.png\", bool_SaveFig = True, bool_CloseFig = True)"
+    "my_Variogram_Plot.plot_Variogram(list_distances, list_bins, list_fitted_model, list_range, list_sill, list_nugget, list_empiral_X,list_empiral_Y, site_Name_Graph = cwd_Image_Folder.split(\"\\\\\")[-1], path_SaveFig = cwd_Image_Folder + \"\\\\Variogram.png\", bool_SaveFig = True, bool_CloseFig = True)"
    ]
   },
   {
