--- a/NoteBooks Draft/R0-Sentinel-2 Stack Bands.ipynb
+++ b/NoteBooks Draft/R0-Sentinel-2 Stack Bands.ipynb
@@ -79,6 +79,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path, subdirs, files in os.walk(cwd + \"\\\\Sentinel-2 Images RAW Duplicate\\\\USA-LIN 2\"):\n",
+    "    for name in files:\n",
+    "        temp = os.path.join(path, name)\n",
+    "        if temp[-3:] == 'jp2'in temp and \"10m\" in temp and \"B03\" in temp :\n",
+    "            path_L2A_B03_raw = temp\n",
+    "        if temp[-3:] == 'jp2'in temp and \"10m\" in temp and \"B04\" in temp :\n",
+    "            path_L2A_B04_raw = temp\n",
+    "        if temp[-3:] == 'jp2'in temp and \"10m\" in temp and \"B08\" in temp :\n",
+    "            path_L2A_B08_raw = temp\n",
+    "list_path= [path_L2A_B03_raw, path_L2A_B04_raw, path_L2A_B08_raw]\n",
+    "# Read Image\n",
+    "list_Image = []\n",
+    "for path in list_path:\n",
+    "    temp = rio.open(path).read(1)\n",
+    "    list_Image.append(temp)\n",
+    "# Read metadata of first file\n",
+    "with rio.open(path_L2A_B03_raw) as src0:\n",
+    "    meta = src0.meta\n",
+    "\n",
+    "# Update meta to reflect the number of layers\n",
+    "meta.update({\"driver\": \"GTiff\",\n",
+    "            \"count\": len(list_path)})\n",
+    "\n",
+    "# Read each layer and write it to stack\n",
+    "with rasterio.open(cwd + \"\\\\Sentinel-2 Images RAW Duplicate\\\\USA-LIN 2\\\\False RGB Stacked.tif\", 'w', **meta) as dst:\n",
+    "    for band_nr, src in enumerate(list_Image, start=1):\n",
+    "        dst.write(src, band_nr)\n",
+    "    dst.descriptions = tuple([\"B03\",\"B04\",\"B08\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -101,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
