--- a/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
+++ b/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +309,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Site</th>\n",
        "      <th>Distance</th>\n",
        "      <th>STD</th>\n",
        "      <th>CV</th>\n",
@@ -320,6 +321,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ATGE</td>\n",
        "      <td>30</td>\n",
        "      <td>10.292980</td>\n",
        "      <td>0.256794</td>\n",
@@ -329,6 +331,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>ATGE</td>\n",
        "      <td>100</td>\n",
        "      <td>15.866641</td>\n",
        "      <td>0.478179</td>\n",
@@ -338,6 +341,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>ATGE</td>\n",
        "      <td>300</td>\n",
        "      <td>20.748732</td>\n",
        "      <td>0.428943</td>\n",
@@ -347,6 +351,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>ATGE</td>\n",
        "      <td>900</td>\n",
        "      <td>20.035755</td>\n",
        "      <td>0.502820</td>\n",
@@ -356,6 +361,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>ATGE</td>\n",
        "      <td>1200</td>\n",
        "      <td>19.909969</td>\n",
        "      <td>0.527853</td>\n",
@@ -365,6 +371,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>30</td>\n",
        "      <td>1.490574</td>\n",
        "      <td>0.055660</td>\n",
@@ -374,6 +381,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>100</td>\n",
        "      <td>4.409100</td>\n",
        "      <td>0.170407</td>\n",
@@ -383,6 +391,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>300</td>\n",
        "      <td>6.381924</td>\n",
        "      <td>0.236488</td>\n",
@@ -392,6 +401,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>600</td>\n",
        "      <td>7.898373</td>\n",
        "      <td>0.242353</td>\n",
@@ -401,6 +411,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
        "      <td>900</td>\n",
        "      <td>11.160982</td>\n",
        "      <td>0.461659</td>\n",
@@ -413,20 +424,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   Distance        STD        CV       Range        Sill        Nugget\n",
-       "0        30  10.292980  0.256794   20.000000   71.762211  3.570080e+01\n",
-       "1       100  15.866641  0.478179   70.000000  267.887789  5.104219e-14\n",
-       "2       300  20.748732  0.428943  104.664412  449.836840  6.333086e+01\n",
-       "3       900  20.035755  0.502820  345.097181  438.814722  1.064037e+02\n",
-       "4      1200  19.909969  0.527853  327.228777  419.066655  8.059260e+01\n",
-       "5        30   1.490574  0.055660   20.000000    1.687615  8.395671e-01\n",
-       "6       100   4.409100  0.170407   30.284278   18.800881  1.834641e-11\n",
-       "7       300   6.381924  0.236488   98.388818   39.292309  1.650852e+01\n",
-       "8       600   7.898373  0.242353  420.000000   69.804207  2.620777e+01\n",
-       "9       900  11.160982  0.461659  630.000000  131.031057  1.541889e+00"
+       "               Site  Distance        STD        CV       Range        Sill  \\\n",
+       "0              ATGE        30  10.292980  0.256794   20.000000   71.762211   \n",
+       "1              ATGE       100  15.866641  0.478179   70.000000  267.887789   \n",
+       "2              ATGE       300  20.748732  0.428943  104.664412  449.836840   \n",
+       "3              ATGE       900  20.035755  0.502820  345.097181  438.814722   \n",
+       "4              ATGE      1200  19.909969  0.527853  327.228777  419.066655   \n",
+       "5  ATLAS-Mohammed V        30   1.490574  0.055660   20.000000    1.687615   \n",
+       "6  ATLAS-Mohammed V       100   4.409100  0.170407   30.284278   18.800881   \n",
+       "7  ATLAS-Mohammed V       300   6.381924  0.236488   98.388818   39.292309   \n",
+       "8  ATLAS-Mohammed V       600   7.898373  0.242353  420.000000   69.804207   \n",
+       "9  ATLAS-Mohammed V       900  11.160982  0.461659  630.000000  131.031057   \n",
+       "\n",
+       "         Nugget  \n",
+       "0  3.570080e+01  \n",
+       "1  5.104219e-14  \n",
+       "2  6.333086e+01  \n",
+       "3  1.064037e+02  \n",
+       "4  8.059260e+01  \n",
+       "5  8.395671e-01  \n",
+       "6  1.834641e-11  \n",
+       "7  1.650852e+01  \n",
+       "8  2.620777e+01  \n",
+       "9  1.541889e+00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +665,7 @@
        "9  0.610914  9.912784   0.525129  0.209272  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
