--- a/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
+++ b/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
@@ -86,9 +86,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-05-06</td>\n",
-       "      <td>2023-08-14</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5/6/2022</td>\n",
+       "      <td>8/14/2023</td>\n",
        "      <td>Y</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -108,9 +108,9 @@
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>mixed pixel, complex topography</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-23</td>\n",
-       "      <td>2023-11-23</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11/23/2023</td>\n",
+       "      <td>11/23/2023</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -130,7 +130,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>topography?</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Duplicate</td>\n",
@@ -152,9 +152,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2022-05-09</td>\n",
-       "      <td>2024-06-18</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5/9/2022</td>\n",
+       "      <td>6/18/2024</td>\n",
        "      <td>Y</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -174,9 +174,9 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Check the site with Sentinal 3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>2022-06-01</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>9/12/2020</td>\n",
+       "      <td>6/1/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -214,18 +214,18 @@
        "4       No   Check the site with Sentinal 3   \n",
        "\n",
        "   PRISMA Availability (900m Buffer ROI Check) PRISMA Earliest Date  \\\n",
-       "0                                            2           2022-05-06   \n",
-       "1                                            2           2023-11-23   \n",
-       "2                                            0                  NaN   \n",
-       "3                                           27           2022-05-09   \n",
-       "4                                            7           2020-09-12   \n",
+       "0                                          2.0             5/6/2022   \n",
+       "1                                          2.0           11/23/2023   \n",
+       "2                                          0.0                  NaN   \n",
+       "3                                         27.0             5/9/2022   \n",
+       "4                                          7.0            9/12/2020   \n",
        "\n",
        "  PRISMA Latest Date (Before 2024-06-26)       Tomi S2 Cloud  \n",
-       "0                             2023-08-14          Y      NaN  \n",
-       "1                             2023-11-23        NaN      NaN  \n",
+       "0                              8/14/2023          Y      NaN  \n",
+       "1                             11/23/2023        NaN      NaN  \n",
        "2                                    NaN  Duplicate      NaN  \n",
-       "3                             2024-06-18          Y      NaN  \n",
-       "4                             2022-06-01        NaN      NaN  "
+       "3                              6/18/2024          Y      NaN  \n",
+       "4                               6/1/2022        NaN      NaN  "
       ]
      },
      "execution_count": 3,
@@ -241,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INDONASIA!\n"
+      "INDONESIA!\n"
      ]
     }
    ],
