--- a/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
+++ b/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,31 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Site Name\n",
-    "site_Name = \"UK\""
+    "site_Name = \"UK-Amo\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'site_Lat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m         site_Lat \u001b[38;5;241m=\u001b[39m df_Site\u001b[38;5;241m.\u001b[39mloc[i,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLatitude\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      6\u001b[0m         site_Lon \u001b[38;5;241m=\u001b[39m df_Site\u001b[38;5;241m.\u001b[39mloc[i,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLongitude\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe latitude of the site is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43msite_Lat\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and the longitude is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msite_Lon\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'site_Lat' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find the coordinate based on the name of the site in our .csv file\n",
     "df_Site = pd.read_csv(cwd + \"//Site.csv\")\n",
@@ -77,7 +65,7 @@
     "    if df_Site.loc[i,\"Site\"] == site_Name:\n",
     "        site_Lat = df_Site.loc[i,\"Latitude\"]\n",
     "        site_Lon = df_Site.loc[i,\"Longitude\"]\n",
-    "print(f\"The latitude of the site is {site_Lat:.4f} and the longitude is {site_Lon:.4f}\")"
+    "# print(f\"The latitude of the site is {site_Lat:.4f} and the longitude is {site_Lon:.4f}\")"
    ]
   },
   {
@@ -89,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -121,20 +109,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UK</td>\n",
-       "      <td>51.153498</td>\n",
-       "      <td>-0.85831</td>\n",
+       "      <td>UK-Amo</td>\n",
+       "      <td>55.792545</td>\n",
+       "      <td>-3.243692</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Site   Latitude  Longitude\n",
-       "0   UK  51.153498   -0.85831"
+       "     Site   Latitude  Longitude\n",
+       "0  UK-Amo  55.792545  -3.243692"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -183,21 +171,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UK</td>\n",
-       "      <td>51.153498</td>\n",
-       "      <td>-0.85831</td>\n",
-       "      <td>POINT (-0.85831 51.15350)</td>\n",
+       "      <td>UK-Amo</td>\n",
+       "      <td>55.792545</td>\n",
+       "      <td>-3.243692</td>\n",
+       "      <td>POINT (-3.24369 55.79254)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Site   Latitude  Longitude                   geometry\n",
-       "0   UK  51.153498   -0.85831  POINT (-0.85831 51.15350)"
+       "     Site   Latitude  Longitude                   geometry\n",
+       "0  UK-Amo  55.792545  -3.243692  POINT (-3.24369 55.79254)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK\\\\L1C\\\\S2B_MSIL1C_20230625T110619_N0509_R137_T30UXB_20230625T114918.SAFE\\\\GRANULE\\\\L1C_T30UXB_A032910_20230625T110839\\\\IMG_DATA\\\\T30UXB_20230625T110619_B08.jp2'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\GRANULE\\\\L1C_T30UVG_A041504_20230603T112117\\\\IMG_DATA\\\\T30UVG_20230603T112121_B08.jp2'"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK\\\\L1C\\\\S2B_MSIL1C_20230625T110619_N0509_R137_T30UXB_20230625T114918.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230625T114918_S20230625T110839\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\DATASTRIP\\\\DS_2APS_20230603T150055_S20230603T112117\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK\\\\L1C\\\\S2B_MSIL1C_20230625T110619_N0509_R137_T30UXB_20230625T114918.SAFE\\\\GRANULE\\\\L1C_T30UXB_A032910_20230625T110839\\\\MTD_TL.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\GRANULE\\\\L1C_T30UVG_A041504_20230603T112117\\\\MTD_TL.xml'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,15 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK\\L2A\\S2B_MSIL2A_20230625T110619_N0509_R137_T30UXB_20230625T123508.SAFE\\GRANULE\\L2A_T30UXB_A032910_20230625T110839\\IMG_DATA\\R10m\\T30UXB_20230625T110619_B04_10m.jp2\n",
-      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK\\L2A\\S2B_MSIL2A_20230625T110619_N0509_R137_T30UXB_20230625T123508.SAFE\\GRANULE\\L2A_T30UXB_A032910_20230625T110839\\IMG_DATA\\R10m\\T30UXB_20230625T110619_B08_10m.jp2\n"
+      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK-Amo\\L2A\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\GRANULE\\L2A_T30UVG_A041504_20230603T112117\\IMG_DATA\\R10m\\T30UVG_20230603T112121_B04_10m.jp2\n",
+      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK-Amo\\L2A\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\GRANULE\\L2A_T30UVG_A041504_20230603T112117\\IMG_DATA\\R10m\\T30UVG_20230603T112121_B08_10m.jp2\n"
      ]
     }
    ],
@@ -355,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK\\\\L2A\\\\S2B_MSIL2A_20230625T110619_N0509_R137_T30UXB_20230625T123508.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230625T123508_S20230625T110839\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L2A\\\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\\\DATASTRIP\\\\DS_2APS_20230603T171858_S20230603T112117\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,13 +376,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rasterio.io.DatasetReader"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "image_L1C_B08 = rio.open(path_L1C_B08_raw)\n",
     "image_L2A_B04 = rio.open(path_L2A_B04_raw)\n",
-    "image_L2A_B08 = rio.open(path_L2A_B08_raw)"
+    "image_L2A_B08 = rio.open(path_L2A_B08_raw)\n",
+    "type(image_L2A_B08)"
    ]
   },
   {
@@ -1225,7 +1225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
